add Progress field
