# proto/HostManager/hostManager.swagger.json
@@ -174,6 +174,10 @@
         "failed": {
           "type": "integer",
           "format": "int32"
+        },
+        "progress": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
